# Stone-Soup

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  pyproject.toml  sonar-project.properties
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs-link.yml  fuzz.yml  nightly.yml  release.yml  upstream-sync.yml
.reuse/: dep5
bindings/: README.md
bindings/ada/: alire.toml  gnatprove.conf  stone_soup-unit_scaling.ali  stonesoup.gpr  stonesoup_ada.gpr  stonesoup_tests.gpr  test_unit_scaling.ali  test_unit_scaling_main.ali
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/stonesoup/: stonesoup.hpp
bindings/cpp/tests/: test_common.hpp  test_covariance_matrix.cpp  test_gaussian_state.cpp  test_state_vector.cpp
bindings/docs/: troubleshooting.md
bindings/go/: go.mod  stonesoup.go  stonesoup_test.go
bindings/java/: build.gradle.kts  pom.xml  settings.gradle.kts
bindings/matlab/: make_octave.m
bindings/nodejs/: Cargo.toml  index.d.ts  package-lock.json  package.json
bindings/nodejs/src/: lib.rs
bindings/nodejs/tests/: stonesoup.test.js
bindings/octave/: PKG_ADD
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/benchmarks/: README.md  benchmark_pyo3.py
bindings/python/python/stonesoup_core/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: __init__.py  conftest.py  test_core.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/examples/: kalman_filter.rs  particle_filter.rs
bindings/rust/src/: lib.rs
bindings/scilab/: DESCRIPTION  DESCRIPTION-FUNCTIONS  builder.sce  cleaner.sce
docs/: ci-requirements.txt
docs/demos/: Video_Processing.py
docs/source/: conf.py  doc_extensions.py  index.rst  security.rst  stonesoup.backend.rst  stonesoup.functions.rst  stonesoup.initiator.rst  stonesoup.predictor.rst  stonesoup.rst  stonesoup.smoother.rst  stonesoup.types.rst  stonesoup.updater.rst
docs/tutorials/: 11_CoordinateSystems.py  12_VoxelTracking.py  13_ViterbiTracking.py
libstonesoup/: CMakeLists.txt
libstonesoup/cmake/: stonesoup-config.cmake.in
libstonesoup/fuzz/: CMakeLists.txt  README.md  fuzz_kalman.c
libstonesoup/include/stonesoup/: coordinates.h  cuda.h  frame_policies.h  kalman.h  matrix.h  particle.h  precision.h  stonesoup.h  types.h  version.h
libstonesoup/src/: coordinates.c  frame_policies.c  kalman.c  matrix.c  particle.c  types.c
libstonesoup/src/cuda/: cuda_kalman.cu  cuda_matrix.cu  cuda_utils.cu
libstonesoup/tests/: CMakeLists.txt  README.md  test_coordinates.c  test_frame_policies.c  test_kalman.c  test_matrix.c  test_particle.c  test_types.c
openspec/: project.md
packaging/: README.md
packaging/conda/: meta.yaml
packaging/docker/: Dockerfile  Dockerfile.minimal
packaging/macos/: Distribution.xml  Info.plist
packaging/windows/: stonesoup.wxs
scripts/: run_gpu_tests.py
stonesoup/: __init__.py  base.py  config.py  kernel.py  plotter.py  plugins.py  serialise.py  stitcher.py
stonesoup/architecture/: __init__.py  _functions.py  edge.py  generator.py  node.py
stonesoup/backend/: __init__.py  cupy_backend.py  numpy_backend.py
stonesoup/dataassociator/: __init__.py  _assignment.py  _ehm.py  base.py  clearmot.py  general.py  neighbour.py  probability.py  tracktotrack.py  tree.py
stonesoup/deleter/: error.py  multi.py
stonesoup/detector/: _video.py  tensorflow.py
stonesoup/feeder/: __init__.py  base.py  coordinate.py  filter.py  geo.py  image.py  multi.py  time.py  track.py
stonesoup/functions/: __init__.py  coordinates.py  interpolate.py  orbital.py  underwater.py
stonesoup/gater/: distance.py  filtered.py
stonesoup/hypothesiser/: categorical.py  composite.py  distance.py  gaussianmixture.py  mfa.py  probability.py  simple.py
stonesoup/initiator/: __init__.py  categorical.py  composite.py  simple.py  viterbi.py  wrapper.py
stonesoup/measures/: __init__.py  multi.py  state.py
stonesoup/metricgenerator/: basicmetrics.py  clearmotmetrics.py  manager.py  metrictables.py  ospametric.py  pcrbmetric.py  plotter.py  tracktotruthmetrics.py  uncertaintymetric.py
stonesoup/mixturereducer/: gaussianmixture.py
stonesoup/models/: base.py
stonesoup/movable/: __init__.py  max_speed.py  movable.py
stonesoup/platform/: __init__.py  base.py  shape.py
stonesoup/predictor/: __init__.py  asd.py  base.py  composite.py  ensemble.py  information.py  kalman.py  kernel.py  particle.py  pointmass.py  voxel.py
stonesoup/proposal/: base.py  simple.py
stonesoup/reader/: __init__.py  aishub.py  astronomical.py  base.py  file.py  generic.py  hdf5.py  image.py  kafka.py  opensky.py  url.py  video.py  yaml.py
stonesoup/regulariser/: particle.py
stonesoup/resampler/: particle.py
stonesoup/sampler/: detection.py  particle.py
stonesoup/sensor/: base.py  gas.py  sensor.py
stonesoup/sensormanager/: __init__.py  action.py  base.py  optimise.py  optuna.py  reward.py  tree_search.py
stonesoup/simulator/: __init__.py  base.py  platform.py  simple.py  transition.py
stonesoup/smoother/: __init__.py  graph_viterbi.py  kalman.py  network_graphs.py  viterbi.py
stonesoup/tests/: conftest.py  fixtures.py  test_buffered_generator.py  test_declarative.py  test_fixtures.py  test_hypothesis_properties.py  test_immutable_class.py  test_kernel.py  test_plotter.py  test_repr.py  test_stitcher.py
stonesoup/tracker/: pmht.py  pointprocess.py  simple.py
stonesoup/types/: angle.py  array.py  association.py  coordinates.py  detection.py  graph.py  groundtruth.py  hypothesis.py  interval.py  metric.py  mixture.py  multihypothesis.py  numeric.py  orbitalstate.py  prediction.py  sensordata.py  state.py  time.py  track.py  update.py  validation.py  voxel.py
stonesoup/updater/: __init__.py  alphabeta.py  asd.py  chernoff.py  composite.py  ensemble.py  information.py  iterated.py  kalman.py  kernel.py  particle.py  pointmass.py  pointprocess.py  probability.py  recursive.py  slidinginnovation.py  voxel.py  wrapper.py
stonesoup/writer/: __init__.py  base.py  kafka.py  (+1 more)
(+433 files in other folders)
