[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "stonesoup"
description = "A tracking and state estimation framework"
maintainers = [
    { name = "Defence Science and Technology Laboratory UK", email = "stonesoup@dstl.gov.uk" },
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy>=1.17",
    "ordered-set",
    "plotly>=5.0",
    "pymap3d",
    "rtree",
    "ruamel.yaml>=0.16.5",
    "scipy",
    "utm",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/dstl/Stone-Soup"
Documentation = "https://stonesoup.readthedocs.org"
"Release Notes" = "https://github.com/dstl/Stone-Soup/releases"
Issues = "https://github.com/dstl/Stone-Soup/issues"

[project.optional-dependencies]
dev = [
    "confluent-kafka",
    "coverage>=7.2",
    "flake8",
    "folium",
    "h5py",
    "ortools",
    "pandas",
    "pillow",
    "pytest-cov",
    "pytest-remotedata",
    "pytest-skip-slow",
    "pytest-xdist",
    "hypothesis",
    "Sphinx",
    "sphinx-gallery>=0.17",
    "sphinx_rtd_theme>=1.2",
    "sphinx-needs>=2.0",
    # Linting and formatting
    "ruff>=0.8.0",
    "black>=24.0",
    # Security scanning
    "bandit[toml]>=1.7",
    "safety>=3.0",
    # Pre-commit hooks
    "pre-commit>=3.0",
]
video = [
    "ffmpeg-python",
    "moviepy",
    "opencv-python",
]
tensorflow = [
    "tensorflow>=2.2.0",
]
orbital = [
    "astropy",
]
mfa = [
    "ortools",
]
ehm = [
    "pyehm",
]
optuna = [
    "optuna",
]
ode = [
    "torch",
]
roadnet = [
    "geopandas",
    "networkx",
]
architectures = [
    "graphviz",
    "networkx",
    "pydot",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "docs",
    "*.tests",
]
namespaces = false

[tool.pytest.ini_options]
python_classes = []
testpaths = ["stonesoup"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "stonesoup"
]
omit = [
    "*/tests/*"
]

[tool.coverage.report]
# Coverage enforcement thresholds
fail_under = 90
precision = 2
show_missing = true

# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code
    "raise NotImplementedError",

    # Ignore pass
    "pass",

    # Ignore type checking
    "if TYPE_CHECKING:",

    # Ignore abstract methods
    "@abstractmethod",

    # Ignore protocol definitions
    "class.*\\(.*Protocol.*\\):",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"

# Ruff configuration - fast Python linter
[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E402",   # Module level import not at top (needed for some examples)
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (needed for tests)
    "B008",   # Function call in default argument (Property pattern)
]

[tool.ruff.lint.per-file-ignores]
"stonesoup/**/tests/**" = ["S101", "S311"]  # Allow assert and random in tests
"docs/**" = ["E402", "B018"]  # Allow import order issues in docs

[tool.ruff.lint.isort]
known-first-party = ["stonesoup"]

# Black configuration - Python formatter
[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | \.eggs
)/
'''

# Bandit configuration - security scanning
[tool.bandit]
exclude_dirs = ["tests", "stonesoup/**/tests", "docs"]
skips = ["B101"]  # Skip assert_used (needed for tests)

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/**"]
