[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "stonesoup-core"
version = "0.1.0"
description = "High-performance Python bindings for Stone Soup tracking framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Stone Soup Contributors"}
]
keywords = ["tracking", "kalman-filter", "particle-filter", "state-estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/dstl/Stone-Soup"
Repository = "https://github.com/dstl/Stone-Soup"
Documentation = "https://stonesoup.readthedocs.io"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stonesoup_core._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
