[package]
name = "stonesoup"
version = "0.1.0"
edition = "2021"
authors = ["Stone Soup Contributors"]
description = "Rust bindings for the Stone Soup tracking framework"
license = "MIT"
repository = "https://github.com/dstl/Stone-Soup"
keywords = ["tracking", "estimation", "kalman", "particle-filter"]
categories = ["science", "algorithms"]

[lib]
name = "stonesoup"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
cc = "1.0"

[features]
default = []
# Enable parallel processing support
parallel = []
# Enable GPU acceleration where available
gpu = []

[[example]]
name = "kalman_filter"
path = "examples/kalman_filter.rs"

[[example]]
name = "particle_filter"
path = "examples/particle_filter.rs"
