[package]
name = "stonesoup"
version = "0.1.0"
edition = "2021"
authors = ["Stone Soup Contributors"]
description = "Rust bindings for the Stone Soup tracking framework"
license = "MIT"
repository = "https://github.com/dstl/Stone-Soup"
keywords = ["tracking", "estimation", "kalman", "particle-filter"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[lib]
name = "stonesoup"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
nalgebra = "0.34"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
cc = "1.0"

[features]
default = []
# Enable parallel processing support
parallel = ["nalgebra/rayon"]
# Enable GPU acceleration where available
gpu = []

# Clippy configuration
[lints.clippy]
# Deny dangerous patterns
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Style
needless_return = "warn"
redundant_closure = "warn"
# Correctness
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
# Performance
inefficient_to_string = "warn"

[[example]]
name = "kalman_filter"
path = "examples/kalman_filter.rs"

[[example]]
name = "particle_filter"
path = "examples/particle_filter.rs"
